# project-railway

./: .gitignore  CMakeLists.txt  README.md  doxyfile  doxyfile.bak
src/: ChangeMenu.cpp  ChangeMenu.h  District.cpp  District.h  DistrictBrute.cpp  DistrictBrute.h  ExampleGraphs.cpp  ExampleGraphs.h  Graph.cpp  Graph.h  MaxFlowUserInput.cpp  MaxFlowUserInput.h  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  MinCostMaxFlow.cpp  MinCostMaxFlow.h  MunDistrict.cpp  MunDistrict.h  Municipalities.cpp  Municipalities.h  MunicipalitiesBrute.cpp  MunicipalitiesBrute.h  MutablePriorityQueue.h  PairsMaxFlow.cpp  PairsMaxFlow.h  Program.cpp  Program.h  ReducedConnectivityMaxFlow.cpp  ReducedConnectivityMaxFlow.h  Scraper.cpp  Scraper.h  SinglePointMaxFlow.cpp  SinglePointMaxFlow.h  TopSegmentFailure.cpp  TopSegmentFailure.h  VertexEdge.cpp  VertexEdge.h  main.cpp  (+2 more)
src/data/: stations.csv
src/graph/: Graph.h  VertexEdge.h
src/menuItems/basicServices/: District.h  DistrictBrute.h  MaxFlowUserInput.h  Municipalities.h  MunicipalitiesBrute.cpp  MunicipalitiesBrute.h  PairsMaxFlow.cpp  PairsMaxFlow.h  SinglePointMaxFlow.h
src/menuItems/costOptimization/: MinCostMaxFlow.h
src/menuItems/general/: ChangeMenu.cpp  ChangeMenu.h  MenuItem.h
src/menuItems/reliabilityAndSensivity/: ReducedConnectivityMaxFlow.cpp  ReducedConnectivityMaxFlow.h  TopSegmentFailure.h
src/menus/: mainMenu  menu1  menu2  menu3  menu5  reducedConnectivity
